add start to html e css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">ù
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.cdnfonts.com/css/new-super-mario-font-u" rel="stylesheet">
+    <title>Simple Counter</title>
 </head>
 <body>
-  
+    <div class="header">
+
+        <div class="description">
+            <p>Count My Jump</p>
+        </div>
+
+        <div class="Jump">
+            <button>Here We Go!</button>
+        </div>
+        <div class="counter">
+            <div class="btn-box"></div>
+        </div>
+    </div>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
