--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Simple Counter</title>
 </head>
 <body>
+ <section class="container">
     <div class="header">
 
         <div class="description">
@@ -15,12 +16,13 @@
         </div>
 
         <div class="Jump">
-            <button>Here We Go!</button>
+            <button onclick="go()">Here We Go!</button>
         </div>
         <div class="counter">
-            <div class="btn-box"></div>
+            <div class="btn-box" id="btnBox"></div>
         </div>
     </div>
+ </section>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
