--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <div class="header">
 
         <div class="description">
-            <p>Count My Jump</p>
+            <p>Take Some Coin!</p>
         </div>
 
         <div class="Jump">
-            <button onclick="go()">Here We Go!</button>
+            <button id="go">Here We Go!</button>
         </div>
+
         <div class="counter">
-            <div class="btn-box" id="btnBox"></div>
+            <div class="btnbox" id="btn-box"></div>
         </div>
     </div>
  </section>
