--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Take Some Coin!</p>
         </div>
 
-        <div class="Jump">
+        <div class="start">
             <button id="go">Here We Go!</button>
         </div>
 
