add start,select,+,- buttons

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <div class="nintendo">Nintendo</div>
 
         <div class="counter-buttons"></div>
+
+        <div class="start-select">
+          <div class="select">SELECT</div>
+          <div class="start">START</div>
+        </div>
         
         <div class="speaker">
           <div class="dot placeholder"></div>
