--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             POWER
           </div>
 
+          <audio id="soundTrack" src="assets/audio/SoundTrack.mp3"></audio>
+          <audio id="audioIncrement" src="assets/audio/addCoin.mp3"></audio>
+          <audio id="audioDecrement" src="assets/audio/loseCoin.wav"></audio>
+          <audio id="audioReset" src="assets/audio/resetCoin.wav"></audio>
+
+          <img id="gifImage" src="assets/images/super-mario-mario.gif" alt="GIF" style="display: none;">
+
           <canvas class="real-display" id="mainCanvas"></canvas>
           
           <div class="label">
