--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
           <audio id="audioDecrement" src="assets/audio/loseCoin.wav"></audio>
           <audio id="audioReset" src="assets/audio/resetCoin.wav"></audio>
 
-          <img id="gifImage" src="assets/images/super-mario-mario.gif" alt="GIF" style="display: none;">
-
+          <div id="counterText"></div>
+          
           <canvas class="real-display" id="mainCanvas"></canvas>
           
+          <img id="gifImage" src="assets/images/super-mario-mario.gif" alt="GIF">
+
           <div class="label">
             <div class="title">GAME BOY</div>
             <div class="subtitle">
