--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>GameBoy Counter</title>
     <link href="https://fonts.cdnfonts.com/css/new-super-mario-font-u" rel="stylesheet">            
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/Favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/Favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/Favicon/site.webmanifest">
 </head>
 <body>
     <div class="gameboy" id="GameBoy">
