--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameBoy Counter</title>
+    <meta name="description" content="A Simple GameBoy Counter" />
     <link href="https://fonts.cdnfonts.com/css/new-super-mario-font-u" rel="stylesheet">            
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/Favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/Favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/Favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/images/Favicon/site.webmanifest">
+
+    <title>GameBoy Counter</title>
+
+    <meta property="og:title" content="GameBoy Counter">
+    <meta property="og:description" content="A Simple JS Counter With Mario Bros"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://cirilleo.github.io/SimpleCounter/"/>
+    <meta property="og:image" content="assets/images/og-img.png" />
+    <meta property="og:image:width" content="630" />
+    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:alt" content="MGameBoy Picture" />
 </head>
 <body>
     <div class="gameboy" id="GameBoy">
