--- a/index.html
+++ b/index.html
@@ -11,23 +11,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/Favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/images/Favicon/site.webmanifest">
 
-  <title>GameBoy Counter</title>
+    <title>GameBoy Counter</title>
 
-  <meta name="description" content="A Simple JS Counter With Mario Bros">
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://cirilleo.github.io/SimpleCounter/">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="GameBoy Counter">
-  <meta property="og:description" content="A Simple JS Counter With Mario Bros">
-  <meta property="og:image" content="https://cirilleo.github.ioassets/images/og-img.png">
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="cirilleo.github.io">
-  <meta property="twitter:url" content="https://cirilleo.github.io/SimpleCounter/">
-  <meta name="twitter:title" content="GameBoy Counter">
-  <meta name="twitter:description" content="A Simple JS Counter With Mario Bros">
-  <meta name="twitter:image" content="https://cirilleo.github.ioassets/images/og-img.png"
-
+    <meta property="og:title" content="GameBoy Counter">
+    <meta property="og:description" content="A Simple JS Counter With Mario Bros"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://cirilleo.github.io/SimpleCounter/"/>
+    <meta property="og:image" content="https://cirilleo.github.io/SimpleCounter/assets/images/og-img.png" />
 </head>
 <body>
     <div class="gameboy" id="GameBoy">
